New sprinkler control with actual control of RPI gpio pins

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <dropwizard.version>0.9.2</dropwizard.version>
+        <pi4j.version>1.0</pi4j.version>
     </properties>
 
     <dependencies>
@@ -22,14 +23,26 @@
         <dependency>
             <groupId>com.pi4j</groupId>
             <artifactId>pi4j-core</artifactId>
-            <version>0.0.5</version>
+            <version>${pi4j.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.pi4j</groupId>
+                    <artifactId>pi4j-native</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.pi4j</groupId>
             <artifactId>pi4j-gpio-extension</artifactId>
-            <version>0.0.5</version>
+            <version>${pi4j.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.pi4j</groupId>
+            <artifactId>pi4j-native</artifactId>
+            <version>${pi4j.version}</version>
+            <type>so</type>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -72,7 +85,7 @@
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.example.helloworld.HelloWorldApplication</mainClass>
+                                    <mainClass>com.hessinteractive.sprinklercontrol.SprinklerControlMain</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
